# football_saudi_arabia

./: .gitignore  README.md  pyproject.toml
dashboard/: 01_app.py
data/bronze/: saudi_data.parquet
data/silver/: saudi_data.parquet
data_handling/: cleaning_date.py
scraping/: extract_saudi_data.py
